# family_budget

./: LICENSE  README.md  README_RUS.md  docker-compose.dev.yaml  docker-compose.yaml  makefile
backend/: .dockerignore  Dockerfile.dev  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 604cfefa38e9_init_db.py  a44fce8d9c2f_fix_relationship.py  c13cd3baab00_add_admin_role.py  d64d4bfab999_fix_relashionship.py  fb443f212f20_init.py
backend/seeds/: seed_dev.py
backend/src/: config.py  database.py  main.py  models.py  schemas.py  seed.py  services.py
