[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniil Rybin <rybindo311@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.7"
uvicorn = {extras = ["standart"], version = "^0.40.0"}
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
